Fix red banners: change to class and text align center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ h1, h3 {
     background-color: #8b0f18;
     width: 100%;
     height: 150px;
+    text-align: center;
 }
 
 #menu a {
@@ -106,12 +107,12 @@ h2 {
 
 /* red banners */
 
-#red-banner {
+.red-banner {
     background-color: #8b0f18;
     width: 100%;
     height: auto;
+    text-align:center;
 }
-
 
 /* our story */
 
